# irsl_choreonoid

./: CMakeLists.txt  README.md  cnoid_yaml_test.cpp  package.xml  setup.py
.github/workflows/: Dockerfile  build-system.yaml
config/: choreonoid_closed_ik.patch  dot.ros2install  dot.rosinstall  osqp-cpp.patch
include/irsl_choreonoid/: Coordinates.h  EigenUtil.h
irsl_choreonoid/: RobotBuilder.py  cnoid_base.py  cnoid_util.py  control_utils.py  draw_coords.py  hrpsyslog_util.py  irsl_draw_object.py  irsl_ipy_magic.py  make_shapes.py  robot_util.py  sample_robot.py  setup_cnoid.py  simulation_utils.py
plugins/: AssemblerBar.cpp  AssemblerBar.h  AssemblerBodyItem.cpp  AssemblerBodyItem.h  AssemblerFileIO.cpp  AssemblerFileIO.h  AssemblerItem.cpp  AssemblerItem.h  AssemblerManager.cpp  AssemblerManager.h  AssemblerSceneBody.cpp  AssemblerSceneBody.h  AssemblerView.cpp  AssemblerView.h  CMakeLists.txt  IRSLSimPlugin.cpp  IRSLSimPlugin.h  IRSLXXXPlugin.cpp  IRSLXXXPlugin.h  RobotAssembler.cpp  RobotAssembler.h  RobotAssemblerBody.cpp  RobotAssemblerBody.h  RobotAssemblerHelper.cpp  RobotAssemblerHelper.h  RobotAssemblerPlugin.cpp  RobotAssemblerPlugin.h  RobotAssemblerSettings.cpp  RobotAssemblerSettings.h  SimStepControllerItem.cpp  SimStepControllerItem.h  XXXBar.cpp  XXXBar.h  XXXBodyItem.cpp  XXXBodyItem.h  XXXFileIO.cpp  XXXFileIO.h  XXXSceneBody.cpp  XXXSceneBody.h  XXXView.cpp  (+6 more)
plugins/pybind11/: CMakeLists.txt  PyIRSLSimPlugin.cpp
pybind11/: CMakeLists.txt  DrawInterface.h  PyAssimpModule.cpp  PyDrawInterface.cpp  PyIRSLCoords.cpp  PyIRSLUtil.cpp
python/irsl_choreonoid/: RobotBuilder.py  cnoid_base.py  cnoid_util.py  draw_coords.py  hrpsyslog_util.py  irsl_draw_object.py  make_shapes.py  robot_simulation.py  robot_util.py  sample_robot.py
sample/: closed_link_ik.body  closed_link_ik.py  draw_coords_on_cnoid.py  draw_coords_sample.py  draw_sample.org.py  draw_sample.py  hrpsys_add_cog_eef.py  ik_sample.py  irsl_import.py  log_util.py  sample.py  simulation_sample.py
settings/: only_scene.cnoid
src/: EigenUtil.cpp
test/: coords_test.py  ik_test.py  run_all_tests.sh
