<?xml version="1.0"?>
<package format="2">
  <name>irsl_choreonoid</name>
  <version>0.0.0</version>
  <description>choreonoid utility package</description>

  <maintainer email="faculty@irsl.eiiris.tut.ac.jp"> IRSL at Toyohashi Tech </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>ik_solvers_python</depend>
</package>
